<resources>
    <string name="app_name" translatable="false">Dairys</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="dream_diary">Dream Diary</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_open" translatable="false">Navigation open</string>
    <string name="navigation_closed" translatable="false">Navigation closed</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="login" translatable="false">Login</string>
    <string name="register">Register</string>
    <string name="your_username">Your username</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_main" translatable="false">Main activity</string>
    <string name="suffixEmail" translatable="false">\@gmail.com</string>
    <string name="add">Add</string>
    <string name="view_pager">View Pager</string>
    <string name="really_happy">Really happy</string>
    <string name="really_happy_db" translatable="false">Really happy</string>
    <string name="happy">Happy</string>
    <string name="happy_db" translatable="false">Happy</string>
    <string name="so_so">So so</string>
    <string name="so_so_db" translatable="false">So so</string>
    <string name="bad">Bad</string>
    <string name="bad_db" translatable="false">Bad</string>
    <string name="terrible">Terrible</string>
    <string name="terrible_db" translatable="false">Terrible</string>
    <string name="feel">"How do you feel? "</string>
    <string name="select_date">Select date</string>
    <string name="activity">Activities done?</string>
    <string name="sport" translatable="false">Sport</string>
    <string name="walk">Walk</string>
    <string name="excursion">Excursion</string>
    <string name="immersion">Immersion</string>
    <string name="cycling">Cycling</string>
    <string name="eat">What did you eat ?</string>
    <string name="breakfast">Breakfast</string>
    <string name="breakfast_db" translatable="false">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="lunch_db" translatable="false">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dinner_db" translatable="false">Dinner</string>
    <string name="snack">Snack</string>
    <string name="snack_db" translatable="false">Snack</string>
    <string name="note">Note</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="pick_photo">Pick photo</string>
    <string name="new_page_title">New Page</string>
    <string name="save">Save</string>
    <string name="content_description_save">Save</string>
    <string name="search">Search food</string>
    <string name="add_food">Add food</string>
    <string name="save_list_food">Save List</string>
    <string name="date_home">Current date</string>
    <string name="really_happy_phrase">It was a beautiful day</string>
    <string name="food_eaten">What you ate today</string>
    <string name="notPage">No diary page written on this day</string>
    <string name="happy_phrase">It was a good day</string>
    <string name="so_so_phrase">It was a normal day</string>
    <string name="bad_phrase">What a bad day</string>
    <string name="terrible_phrase">I think I want to die</string>
    <string name="empty_animation">Empty page</string>
    <string name="activityDone">What activity did you do?</string>
    <string name="loading">Loading</string>
    <string name="saveProfileChange">Save profile changes</string>
    <string name="save_profile_changes">Save</string>
    <string name="not_insered">"Not yet inserted "</string>
    <string name="not_inserted">"Not yet inserted "</string>
    <string name="select_data_fro_chart">Select data</string>
    <string name="humor">Humor</string>
    <string name="food">Food</string>
    <string name="activityStatistic" translatable="false">Activity</string>
    <string name="val_1" translatable="false"><![CDATA[-> 1]]></string>
    <string name="val_2" translatable="false"><![CDATA[-> 2]]></string>
    <string name="val_4" translatable="false"><![CDATA[-> 4]]></string>
    <string name="val_3" translatable="false"><![CDATA[-> 3]]></string>
    <string name="val_0" translatable="false"><![CDATA[-> 0]]></string>
    <string name="favorites">Favorites</string>
    <string name="like">Like</string>
    <string name="save_dream">Save dream</string>
    <string name="dream_Animation">Dream animation</string>
    <string name="new_dream_button" translatable="false">New dream button</string>
    <string name="sortDream">Sort dream by:</string>
    <string name="date_sort">Date</string>
    <string name="like_sort">Like</string>
    <string name="filterDream">Filter Dream</string>
    <string name="filter">Filter</string>
    <string name="add_tag">Add tag</string>
    <string name="life_journey" translatable="false">Life Journey</string>
    <string name="dark_mode" translatable="false">Dark mode</string>
    <string name="note_style" translatable="false">Note style</string>
    <string name="italian">Italian</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="gallery">"Photo gallery "</string>
    <string name="gallery_photo">Gallery</string>
    <string name="baby_doll" translatable="false">Baby doll</string>
    <string name="dudu" translatable="false">Dudu</string>
    <string name="kg" translatable="false">Kg</string>
    <string name="defaultFont" translatable="false">Default</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="chart_color">Chart color</string>
    <string name="vordiplom" translatable="false">Vordiplom</string>
    <string name="material" translatable="false">Material</string>
    <string name="colorful" translatable="false">Colorful</string>
    <string name="pastel" translatable="false">Pastel</string>
    <string name="liberty" translatable="false">Liberty</string>
    <string name="joyful" translatable="false">JoyFul</string>
    <string name="share">Share</string>
    <string name="contact">Contact us</string>
    <string name="wallpaper_drawer" translatable="false">Wallpaper drawer</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="widget_text" translatable="false">How was your day?</string>
    <string name="targets">Targets</string>
    <string name="goal_monthly">"Your monthly goal "</string>
    <string name="targets_completed">"Targets completed this year: "</string>
    <string name="other_settings">Other settings</string>
    <string name="profile">Profile</string>
    <string name="restart">"Restart the app to make the changes "</string>
</resources>