<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/targets"
            android:id="@+id/targets"
            android:icon="@drawable/ic_targets"
            />

        <item
            android:title="@string/wallpaper_drawer"
            android:id="@+id/wallpaper_drawer"
            android:icon="@drawable/ic_wallpaper_drawer"
            />

    </group>

    <item android:title="@string/other_settings">

        <menu>

            <item
                android:title="@string/profile"
                android:id="@+id/profile"
                android:icon="@drawable/ic_profile"
                />

            <item
                android:title="@string/share"
                android:id="@+id/share"
                android:icon="@drawable/ic_share"/>

            <item
                android:title="@string/contact"
                android:id="@+id/contact_us"
                android:icon="@drawable/ic_contact_us"/>

        </menu>

    </item>

</menu>