<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/statistics"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/statistics"/>

    <item
        android:id="@+id/dream_diary"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_diary_24"
        android:title="@string/dream_diary"/>

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

</menu>