<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.StatisticsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BackGround_TopBar"
        android:layout_marginBottom="60dp">

        <include
            android:id="@+id/include"
            layout="@layout/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/select_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/select_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            style="@style/ExtendedFloatingActionButton_style"
            android:text="@string/select_data_fro_chart"
            android:textAlignment="center"
            app:popupTheme="@style/PopupMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:strokeWidth="1dp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutLegenda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_data" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutLegenda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_data" />

        <LinearLayout
            android:id="@+id/linearLayoutLegenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pieChart">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_really_happy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SetTextColorPrimary"
                android:text="@string/val_4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_happy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SetTextColorPrimary"
                android:text="@string/val_3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_so_so" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SetTextColorPrimary"
                android:text="@string/val_2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_bad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SetTextColorPrimary"
                android:text="@string/val_1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_terrible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SetTextColorPrimary"
                android:text="@string/val_0" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>